Update blog description

--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@ layout: default
   <h2>Blogging</h2>
 
   <p>
-    Auf <a target="_blank" href="{{ site.links.blog }}">meinimalismus.de</a>
-    setze ich mich mit dem vielf&auml;ltigen Thema Minimalismus auseinander. Ob
-    Reduzierung von Gedankenchaos, Unordnung oder Abfall, ich schreibe &uuml;ber
-    allerlei Strategien, um unn&ouml;tigen Ballast loszulassen und das innere
-    und &auml;ußere Chaos zu b&auml;ndigen.
+    <a target="_blank" href="{{ site.links.blog }}">Gedankenshift</a> ist mein
+    Blog zum Nach-, Um- und Querdenken. Was einst mit dem Schwerpunkt
+    Minimalismus begann, ist zu einem Ort gewachsen, an dem sich mittlerweile
+    allerlei Anregungen zum Reflektieren und Hinterfragen finden.
     <a class="button" target="_blank" href="{{ site.links.blog }}">
       <i class="fa fa-lg fa-fw fa-edit"></i> Besuche meinen Blog
     </a>
