--- a/index_en.html
+++ b/index_en.html
@@ -19,9 +19,9 @@ layout: default
   <h2>Blogging</h2>
 
   <p>
-    On <a target="_blank" href="{{ site.links.blog }}">meinimalismus.de</a>
-    I write about my way to a minimalist life. Learn more about minimalism,
-    tidiness and sustainability in my blog posts.
+    On <a target="_blank" href="{{ site.links.blog }}">Gedankenshift</a>
+    I try to open up new perspectives by writing about various topics like
+    self-reflection, decision making and minimalism.
     <a class="button" target="_blank" href="{{ site.links.blog }}">
       <i class="fa fa-lg fa-fw fa-edit"></i> Visit my blog
     </a>
