Remove hacking section, GitHub link only at the bottom

--- a/index.html
+++ b/index.html
@@ -57,19 +57,6 @@ layout: default
 </section>
 
 <section>
-  <h2>Hacking</h2>
-
-  <p>
-    Immer wieder hinterlasse ich Spuren auf GitHub, insbesondere bei der
-    Entwicklung eines
-    <a target="_blank" href="{{ site.links.uv }}">Urlaubsverwaltung Tools</a>.
-    <a class="button" target="_blank" href="{{ site.user.github }}">
-      <i class="fa fa-lg fa-fw fa-github-alt"></i> Geh auf GitHub
-    </a>
-  </p>
-</section>
-
-<section>
   <h2>Und sonst so?</h2>
 
   <p>
@@ -78,6 +65,9 @@ layout: default
     </a>
     <a class="button" target="_blank" href="{{ site.user.pinterest }}">
       <i class="fa fa-lg fa-fw fa-pinterest"></i> Folge mir auf Pinterest
+    </a>
+    <a class="button" target="_blank" href="{{ site.user.github }}">
+      <i class="fa fa-lg fa-fw fa-github-alt"></i> Folge mir auf GitHub
     </a>
     <a class="button" href="mailto:{{ site.user.email }}">
       <i class="fa fa-fw fa-envelope"></i> Schreib mir eine E-Mail
