--- a/index_en.html
+++ b/index_en.html
@@ -54,18 +54,6 @@ layout: default
 </section>
 
 <section>
-  <h2>Hacking</h2>
-
-  <p>
-    Now and then I leave my mark on GitHub, especially on a
-    <a target="_blank" href="{{ site.links.uv }}">vacation management tool</a>.
-    <a class="button" target="_blank" href="{{ site.user.github }}">
-      <i class="fa fa-lg fa-fw fa-github-alt"></i> Check out my GitHub page
-    </a>
-  </p>
-</section>
-
-<section>
   <h2>More?</h2>
 
   <p>
@@ -74,6 +62,9 @@ layout: default
     </a>
     <a class="button" target="_blank" href="{{ site.user.pinterest }}">
       <i class="fa fa-lg fa-fw fa-pinterest"></i> Follow me on Pinterest
+    </a>
+    <a class="button" target="_blank" href="{{ site.user.github }}">
+      <i class="fa fa-lg fa-fw fa-github-alt"></i> Follow me on GitHub
     </a>
     <a class="button" href="mailto:{{ site.user.email }}">
       <i class="fa fa-fw fa-envelope"></i> Drop me an email
