Update content of index page

--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@ layout: default
 
 <section>
   <h1 class="center">Hi, ich bin Frau Lyoner.</h1>
+
   <p>
-    Eigentlich h&ouml;re ich auf den Namen Aljona, doch die &Auml;hnlichkeit
-    meines Vornamens zu einer gewissen Wurstsorte hat mir dieses eher
-    ungew&ouml;hnliche Pseudonym eingebracht. Zusammen mit Ehemann und Tochter
-    lebe ich im sch&ouml;nen
-    <a target="_blank" href="{{ site.links.location}}">Karlsruhe</a>.
-    <a class="button" href="mailto:{{ site.user.email }}">
-      <i class="fa fa-fw fa-envelope"></i> Schreib mir eine E-Mail
+    Ich jongliere gerne mit Gedanken und bin
+    leidenschaftliche Buchstabenmalerin und Flipchartkritzelantin.
+    <a class="button" href="about.html">
+      <i class="fa fa-fw fa-user-circle"></i> &Uuml;ber mich
     </a>
   </p>
 </section>
 
 <section>
-  <h2>Blogging</h2>
+  <h2>Gedankenjonglage</h2>
 
   <p>
     <a target="_blank" href="{{ site.links.blog }}">Gedankenshift</a> ist mein
@@ -25,33 +23,37 @@ layout: default
     Minimalismus begann, ist zu einem Ort gewachsen, an dem sich mittlerweile
     allerlei Anregungen zum Reflektieren und Hinterfragen finden.
     <a class="button" target="_blank" href="{{ site.links.blog }}">
-      <i class="fa fa-lg fa-fw fa-edit"></i> Besuche meinen Blog
+      <i class="fa fa-lg fa-fw fa-map-signs"></i> Denkanst&ouml;&szlig;e &amp; Perspektivenwechsel
     </a>
   </p>
 </section>
 
 <section>
-  <h2>Lettering</h2>
+  <h2>Buchstabenmalerei</h2>
 
   <p>
     Ende 2015 habe ich mich mit dem hochgradig ansteckenden
     <a target="_blank" href="{{ site.links.lettering }}">Lettering</a>
     Virus infiziert. Seither ist meine Buchstabenmalerei auch auf
-    Instagram zu finden.
+    <a target="_blank" href="{{ site.user.instagram }}">Instagram</a>
+    zu finden.
     <a class="button" target="_blank" href="{{ site.user.instagram }}">
-      <i class="fa fa-lg fa-fw fa-instagram"></i> Folge mir auf Instagram
+      <i class="fa fa-lg fa-fw fa-paint-brush"></i> Handlettering &amp; Sketchnotes
     </a>
   </p>
 </section>
 
 <section>
-  <h2>Agiling</h2>
+  <h2>Flipchartkritzeleien</h2>
 
   <p>
-    Da ich seit Februar 2019 als Scrum Master / Prozessbegleiter t&auml;tig bin,
-    halte ich meine Erfahrungen und Lessons Learned in einer Art Logbuch fest.
+    Seit Anfang 2019 bin ich als Scrum Master / Prozessbegleiterin t&auml;tig.
+    Flipcharts von Retrospektiven und Workshops sowie weitere Visualisierungen
+    stelle ich auf meinem Blog
+    <a target="_blank" href="{{ site.links.agile }}">Yet Another Agile Blog</a>
+    als Inspiration zur Verf&uuml;gung.
     <a class="button" target="_blank" href="{{ site.links.agile }}">
-      <i class="fa fa-lg fa-fw fa-book"></i> Besuche mein Logbuch
+      <i class="fa fa-lg fa-fw fa-image"></i> Flipcharts &amp; Visualisierungen
     </a>
   </p>
 </section>
@@ -62,6 +64,9 @@ layout: default
   <p>
     <a class="button" target="_blank" href="{{ site.user.twitter }}">
       <i class="fa fa-lg fa-fw fa-twitter"></i> Folge mir auf Twitter
+    </a>
+    <a class="button" target="_blank" href="{{ site.user.instagram }}">
+      <i class="fa fa-lg fa-fw fa-instagram"></i> Folge mir auf Instagram
     </a>
     <a class="button" target="_blank" href="{{ site.user.pinterest }}">
       <i class="fa fa-lg fa-fw fa-pinterest"></i> Folge mir auf Pinterest
