Add pictures to index page

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@ layout: default
       <i class="fa fa-lg fa-fw fa-paint-brush"></i> Handlettering &amp; Sketchnotes
     </a>
   </p>
+
+  <p>
+    <img style="width: 100%" alt="Handlettering und Sketchnotes"
+    src="/img/handlettering_and_sketchnotes.jpg"/>
+  </p>
 </section>
 
 <section>
@@ -55,6 +60,11 @@ layout: default
     <a class="button" target="_blank" href="{{ site.links.agile }}">
       <i class="fa fa-lg fa-fw fa-image"></i> Flipcharts &amp; Visualisierungen
     </a>
+  </p>
+
+  <p>
+    <img style="width: 100%; border: 1px solid #E6E2E1" alt="Visualisierungen Agile, Scrum und Co."
+    src="/img/scrum_sprint.jpg"/>
   </p>
 </section>
 
