Minor index page content update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
     Minimalismus begann, ist zu einem Ort gewachsen, an dem sich mittlerweile
     allerlei Anregungen zum Reflektieren und Hinterfragen finden.
     <a class="button" target="_blank" href="{{ site.links.blog }}">
-      <i class="fa fa-lg fa-fw fa-map-signs"></i> Denkanst&ouml;&szlig;e &amp; Perspektivenwechsel
+      <i class="fa fa-lg fa-fw fa-map-signs"></i> Denkanst&ouml;&szlig;e &amp; Anregungen
     </a>
   </p>
 </section>
