Update image border of agile blog example

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ layout: default
   </p>
 
   <p>
-    <img style="width: 100%; border: 1px solid #E6E2E1" alt="Visualisierungen Agile, Scrum und Co."
+    <img style="width: 100%; border: 1px solid #eee" alt="Visualisierungen Agile, Scrum und Co."
     src="/img/scrum_sprint.jpg"/>
   </p>
 </section>
