Minor content update on index page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <h1 class="center">Hi, ich bin Frau Lyoner.</h1>
 
   <p>
-    Ich jongliere gerne mit Gedanken und bin
+    Ich jongliere gerne mit Worten und Gedanken und bin
     leidenschaftliche Buchstabenmalerin und Flipchartkritzelantin.
     <a class="button" href="about.html">
       <i class="fa fa-fw fa-user-circle"></i> &Uuml;ber mich
