Minor content update on link tree page

--- a/link-tree.html
+++ b/link-tree.html
@@ -18,7 +18,7 @@ layout: default
       Flipcharts f&uuml;r Retrospektiven
     </a>
     <a class="button" target="_blank" href="{{ site.links.agile }}2020/02/08/kleine-scrum-schule.html">
-      Freebie: Kleine Scrum Schule
+      Freebie "Kleine Scrum Schule"
     </a>
     <a class="button" href="index.html">
       Meine Seite "fraulyoner.de"
