Add follow links to about page

--- a/about.html
+++ b/about.html
@@ -30,3 +30,11 @@ layout: default
     </a>
   </p>
 </section>
+
+<section>
+  <h2>Und sonst so?</h2>
+
+  <p>
+    {% include follow.html %}
+  </p>
+</section>
