Link to #HomeOfficeAbisZ page on index page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@ layout: default
     <a target="_blank" href="{{ site.links.lettering }}">Lettering</a>
     Virus infiziert. Seither ist meine Buchstabenmalerei auch auf
     <a target="_blank" href="{{ site.user.instagram }}">Instagram</a>
-    zu finden.
+    zu finden. Auch vor
+    <a target="_blank" href="{{ site.links.sketchnotes }}">Sketchnotes</a>
+    mache ich keinen Halt. So habe ich k&uuml;rzlich beispielsweise bei der
+    <a target="_blank" href="homeofficeabisz.html">#HomeOfficeAbisZ</a>
+    Challenge mitgekritzelt.
     <a class="button" target="_blank" href="{{ site.user.instagram }}">
       <i class="fa fa-lg fa-fw fa-paint-brush"></i> Handlettering &amp; Sketchnotes
     </a>
