Fix behavior of link that directs to inner page

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@ layout: default
     zu finden. Auch vor
     <a target="_blank" href="{{ site.links.sketchnotes }}">Sketchnotes</a>
     mache ich keinen Halt. So habe ich k&uuml;rzlich beispielsweise bei der
-    <a target="_blank" href="homeofficeabisz.html">#HomeOfficeAbisZ</a>
-    Challenge mitgekritzelt.
+    <a href="homeofficeabisz.html">#HomeOfficeAbisZ</a> Challenge mitgekritzelt.
     <a class="button" target="_blank" href="{{ site.user.instagram }}">
       <i class="fa fa-lg fa-fw fa-paint-brush"></i> Handlettering &amp; Sketchnotes
     </a>
