Add HomeofficeAbisZ page as link to link tree

--- a/link-tree.html
+++ b/link-tree.html
@@ -20,6 +20,9 @@ layout: default
     <a class="button" target="_blank" href="{{ site.links.agile }}2020/02/08/kleine-scrum-schule.html">
       Freebie "Kleine Scrum Schule"
     </a>
+    <a class="button" href="homeofficeabisz.html">
+      #HomeOfficeAbisZ
+    </a>
     <a class="button" href="index.html">
       Meine Seite "fraulyoner.de"
     </a>
