Add missing icon to button

--- a/homeofficeabisz.html
+++ b/homeofficeabisz.html
@@ -122,7 +122,7 @@ layout: default
     src="/img/HomeOfficeAbisZ/HomeOfficeAbisZ_Z.jpg"/>
   </a>
   <a class="button" href="index.html">
-    Zur&uuml;ck zur Startseite
+    <i class="fa fa-lg fa-fw fa-home"></i> Zur&uuml;ck zur Startseite
   </a>
 </section>
 
