--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@ layout: default
   <h1 class="center">Hi, ich bin Frau Lyoner.</h1>
 
   <p>
-    Ich jongliere gerne mit Worten und Gedanken und bin
-    leidenschaftliche Buchstabenmalerin und Flipchartkritzelantin.
-    <a class="button" href="about.html">
-      <i class="fa fa-fw fa-user-circle"></i> &Uuml;ber mich
-    </a>
+    Eigentlich hei&szlig;e ich Aljona, doch das Pseudonym Frau Lyoner begleitet
+    mich bereits ein gutes Jahrzehnt. Da ich immer wieder nach der korrekten
+    Aussprache meines Namens gefragt werde, habe ich mir angew&ouml;hnt zu
+    antworten: »Aljona – so wie Lyoner, nur mit einem A vorne.«
+  </p>
+  <p>
+    Ich jongliere gerne mit Worten und Gedanken und bin leidenschaftliche
+    Buchstabenmalerin und Flipchartkritzelantin. Zusammen mit Ehemann und
+    dreij&auml;hriger Tochter lebe ich im sch&ouml;nen
+    <a target="_blank" href="{{ site.links.location}}">Karlsruhe</a>.
+  </p>
+
+  <p>
+    <img style="width: 100%;" alt="Hi, ich bin Frau Lyoner"
+    src="/img/fraulyoner.jpg"/>
   </p>
 </section>
 
