--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: default
 
   <p>
     Ende 2015 habe ich mich mit dem hochgradig ansteckenden
-    <a target="_blank" href="{{ site.links.lettering }}">Lettering</a>
+    <a href="handlettering.html">Lettering</a>
     Virus infiziert. Seither ist meine Buchstabenmalerei auch auf
     <a target="_blank" href="{{ site.user.instagram }}">Instagram</a>
     zu finden. Auch vor
