Update teaser text

--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@ layout: default
   <h1 class="center">Hi, ich bin Frau Lyoner.</h1>
 
   <p>
-    Eigentlich hei&szlig;e ich Aljona, doch das Pseudonym Frau Lyoner begleitet
-    mich bereits ein gutes Jahrzehnt. Da ich immer wieder nach der korrekten
-    Aussprache meines Namens gefragt werde, habe ich mir angew&ouml;hnt zu
-    antworten: »Aljona – so wie Lyoner, nur mit einem A vorne.«
-  </p>
-  <p>
-    Ich jongliere gerne mit Worten und Gedanken und bin leidenschaftliche
-    Buchstabenmalerin und Flipchartkritzelantin. Zusammen mit Ehemann und
-    dreij&auml;hriger Tochter lebe ich im sch&ouml;nen
+    Mit Hand, Herz und Hirn zaubere ich Kreativkram gepaart mit Gedankenimpulsen.
+    Zusammen mit Ehemann und dreij&auml;hriger Tochter lebe ich im sch&ouml;nen
     <a target="_blank" href="{{ site.links.location}}">Karlsruhe</a>.
+  </p>
+
+  <p>
+    Mein richtiger Vorname ist &uuml;brigens Aljona. Wie Lyoner, nur mit einem A
+    vorne. Jetzt ist auch raus, wie ich zu meinem Pseudonym Frau Lyoner kam.
   </p>
 
   <p>
