--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
 </section>
 
 <section>
-  <h2>Gedankenjonglage</h2>
+  <h2>Gedankenshift</h2>
 
   <p>
     <a target="_blank" href="{{ site.links.blog }}">Gedankenshift</a> ist mein
@@ -37,7 +37,7 @@ layout: default
 </section>
 
 <section>
-  <h2>Buchstabenmalerei</h2>
+  <h2>Handlettering &amp; Sketchnotes</h2>
 
   <p>
     Ende 2015 habe ich mich mit dem hochgradig ansteckenden
@@ -49,7 +49,7 @@ layout: default
     mache ich keinen Halt. So habe ich k&uuml;rzlich beispielsweise bei der
     <a href="homeofficeabisz.html">#HomeOfficeAbisZ</a> Challenge mitgekritzelt.
     <a class="button" target="_blank" href="{{ site.user.instagram }}">
-      <i class="fa fa-lg fa-fw fa-paint-brush"></i> Handlettering &amp; Sketchnotes
+      <i class="fa fa-lg fa-fw fa-paint-brush"></i> Buchstabenmalerei &amp; Kritzeleien
     </a>
   </p>
 
@@ -60,7 +60,7 @@ layout: default
 </section>
 
 <section>
-  <h2>Flipchartkritzeleien</h2>
+  <h2>Yet Another Agile Blog</h2>
 
   <p>
     Seit Anfang 2019 bin ich als Scrum Master / Prozessbegleiterin t&auml;tig.
