Fix too many chars in button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: default
     mache ich keinen Halt. So habe ich k&uuml;rzlich beispielsweise bei der
     <a href="homeofficeabisz.html">#HomeOfficeAbisZ</a> Challenge mitgekritzelt.
     <a class="button" target="_blank" href="{{ site.user.instagram }}">
-      <i class="fa fa-lg fa-fw fa-paint-brush"></i> Buchstabenmalerei &amp; Kritzeleien
+      <i class="fa fa-lg fa-fw fa-paint-brush"></i> Buchstabenmalerei &amp; Gekritzel
     </a>
   </p>
 
