Update content of blog link to gedankenshift

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@ hide: true
       <p>
         <a target="_blank" href="{{ site.data.links.gedankenshift }}">Gedankenshift</a> ist mein
         Blog zum Nach-, Um- und Querdenken. Was einst mit dem Schwerpunkt
-        Minimalismus begann, ist zu einem Ort gewachsen, an dem sich mittlerweile
-        allerlei Anregungen zum Reflektieren und Hinterfragen finden.
+        Minimalismus begann, ist zu einem Ort gewachsen, an dem ich allerlei
+        Denkanstöße für mehr Zufriedenheit, weniger Perfektionismus und Mut zu
+        selbstbestimmten Entscheidungen gebe.
         <a class="button" target="_blank" href="{{ site.data.links.gedankenshift }}">
           <i class="fa fa-lg fa-fw fa-sign-in"></i> Mein Blog Gedankenshift
         </a>
