Update description of gedankenshift

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@ hide: true
       <h2>Denkanstöße & Anregungen</h2>
 
       <p>
-        <a target="_blank" href="{{ site.data.links.gedankenshift }}">Gedankenshift</a> ist mein
-        Blog zum Nach-, Um- und Querdenken. Was einst mit dem Schwerpunkt
-        Minimalismus begann, ist zu einem Ort gewachsen, an dem ich allerlei
-        Denkanstöße für mehr Zufriedenheit, weniger Perfektionismus und Mut zu
-        selbstbestimmten Entscheidungen gebe.
+        Umdenken, loslassen, wohlfühlen. So lautet das Motto meines Blogs
+        <a target="_blank" href="{{ site.data.links.gedankenshift }}">Gedankenshift</a>.
+        Was einst mit dem Schwerpunkt Minimalismus begann, ist zu einem Ort
+        gewachsen, an dem ich verschiedenste Denkanstöße für mehr Zufriedenheit,
+        weniger Perfektionismus und Mut zu selbstbestimmten Entscheidungen gebe.
         <a class="button" target="_blank" href="{{ site.data.links.gedankenshift }}">
           <i class="fa fa-lg fa-fw fa-sign-in"></i> Mein Blog Gedankenshift
         </a>
