Update description of yaab

--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@ hide: true
       <h2>Flipcharts & Visualisierungen</h2>
 
       <p>
-        Beruflich bin ich in der IT-Branche zuhause. Ich habe einige Jahre als
-        Softwareentwicklerin gearbeitet und bin seit Anfang 2019 als Scrum
-        Master / Prozessbegleiterin tätig. Flipcharts von Retrospektiven und
-        Workshops sowie weitere Visualisierungen stelle ich auf meinem Blog
+        Hauptberuflich bin ich seit über neun Jahren in der IT-Branche zuhause.
+        Eineinhalb Jahre davon war ich als Scrum Master / Prozessbegleiterin
+        tätig. Während dieser Zeit haben sich einige Flipcharts von
+        Retrospektiven und Workshops sowie weitere Visualisierungen angesammelt,
+        die ich gerne auf meinem Blog
         <a target="_blank" href="{{ site.data.links.agile }}">Yet Another Agile Blog</a>
-        als Inspiration zur Verfügung.
+        als Inspiration zur Verfügung stelle.
         <a class="button" href="{{ '/flipcharts/' | relative_url }}">
           <i class="fa fa-image fa-fw"></i> Beispiele meiner Flipcharts
         </a>
