--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@ hide: true
       <p>
         Im Januar 2016 verlor ich mein Herz an die
         <a href="{{ '/handlettering/' | relative_url }}">Buchstabenmalerei</a> (Handlettering)
-        und bin seitdem auch auf Instagram
-        aktiv. In letzter Zeit versuche ich mich auch wieder vermehrt in
-        Sketchnotes, denn ich lebe mit Haut und Haar die Devise »Übung ist alles«.
-        So habe ich kürzlich beispielsweise bei der
+        und bin seitdem auch auf
+        <a href="https://instagram.com/{{ site.data.social.instagram }}" target="_blank">Instagram</a>
+        aktiv. Außerdem versuche ich mich auch immer wieder an Sketchnotes, denn
+        ich lebe mit Haut und Haar die Devise »Übung ist alles«. So habe ich bspw.
+        während der Corontäne bei der
         <a href="{{ '2020/05/03/sketchnotes-challenge-homeofficeabisz.html' | relative_url }}">#HomeOfficeAbisZ</a> Challenge
         mitgekritzelt.
         <a class="button" href="{{ '/handlettering/' | relative_url }}">
