Remove link to yet another agile blog

--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@ hide: true
         Hauptberuflich bin ich seit über neun Jahren in der IT-Branche zuhause.
         Eineinhalb Jahre davon war ich als Scrum Master / Prozessbegleiterin
         tätig. Während dieser Zeit haben sich einige Flipcharts von
-        Retrospektiven und Workshops sowie weitere Visualisierungen angesammelt,
-        die ich gerne auf meinem Blog
-        <a target="_blank" href="{{ site.data.links.agile }}">Yet Another Agile Blog</a>
-        als Inspiration zur Verfügung stelle.
+        Retrospektiven und Workshops angesammelt, die ich gerne als Inspiration
+        zur Verfügung stelle.
         <a class="button" href="{{ '/flipcharts/' | relative_url }}">
           <i class="fa fa-image fa-fw"></i> Beispiele meiner Flipcharts
         </a>
