Update content of index page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ hide: true
       Ich bin Buchstabenmalerin, Wortjongleurin, Gedankenspielerin, Nachteule,
       Mama, Woman in Tech und noch so viel mehr. Mein richtiger Vorname ist
       übrigens Aljona – gesprochen wie Lyoner, nur mit einem A vorne. Zusammen
-      mit Ehemann und dreijähriger Tochter lebe ich im schönen
+      mit Ehemann und kleiner Tochter lebe ich im schönen
       <a href="{{ site.data.links.location }}" target="_blank">Karlsruhe</a>.
       </p>
       <p class="text-center">
