index.html: Update location link

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ hide: true
       Ich bin Buchstabenmalerin, Wortjongleurin, Gedankenspielerin, Nachteule,
       Mama, Woman in Tech und noch so viel mehr. Mein richtiger Vorname ist
       übrigens Aljona – gesprochen wie Lyoner, nur mit einem A vorne. Zusammen
-      mit Ehemann und kleiner Tochter lebe ich im schönen
-      <a href="{{ site.data.links.location }}" target="_blank">Karlsruhe</a>.
+      mit Ehemann und kleiner Tochter lebe ich in der schönen
+      <a href="{{ site.data.links.location }}" target="_blank">Karlsruher Weststadt</a>.
       </p>
       <p class="text-center">
         <img src="{{ '/assets/img/fraulyoner.jpg' | relative_url }}"/>
