index.html: Add contact button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ hide: true
       übrigens Aljona – gesprochen wie Lyoner, nur mit einem A vorne. Zusammen
       mit Ehemann und kleiner Tochter lebe ich in der schönen
       <a href="{{ site.data.links.location }}" target="_blank">Karlsruher Weststadt</a>.
+      <a class="button" href="mailto:{{ site.data.social.email_address }}">
+        <i class="fa fa-envelope-o fa-fw"></i> Schreib mir eine E-Mail
+      </a>
       </p>
       <p class="text-center">
         <img src="{{ '/assets/img/fraulyoner.jpg' | relative_url }}"/>
