index.html: Remove link to sketchnote blog post

--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@ hide: true
         und bin seitdem auch auf
         <a href="https://instagram.com/{{ site.data.social.instagram }}" target="_blank">Instagram</a>
         aktiv. Außerdem versuche ich mich auch immer wieder an Sketchnotes, denn
-        ich lebe mit Haut und Haar die Devise »Übung ist alles«. So habe ich bspw.
-        während der Corontäne bei der
-        <a href="{{ '2020/05/03/sketchnotes-challenge-homeofficeabisz.html' | relative_url }}">#HomeOfficeAbisZ</a> Challenge
-        mitgekritzelt.
+        ich lebe mit Haut und Haar die Devise »Übung ist alles«.
         <a class="button" href="{{ '/handlettering/' | relative_url }}">
           <i class="fa fa-paint-brush fa-fw"></i> Beispiele meiner Buchstabenkunst
         </a>
