link tree: minor update of link descriptions

--- a/link-tree.html
+++ b/link-tree.html
@@ -21,10 +21,10 @@ hide: true
         Mein Blog Gedankenshift
       </a>
       <a class="button" href="{{ '/blog' | relative_url }}">
-        Mein Handlettering Blog
+        Handlettering Tipps
       </a>
       <a class="button" href="{{ '/' | relative_url }}">
-        Mehr über mich
+        Über mich
       </a>
     </p>
   </section>
