Update link tree

--- a/link-tree.html
+++ b/link-tree.html
@@ -15,16 +15,16 @@ hide: true
     <h3>Frau Lyoner</h3>
     <p>
       <a class="button" target="_blank" href="https://www.artboxone.de/wandbilder/poster-im-kunststoffrahmen/frau-lyoner/bestseller">
-        Meine Motive bei artboxONE
+        Meine Motive im artboxONE Shop
       </a>
       <a class="button" href="{{ site.data.links.gedankenshift }}">
-        Mein Blog Gedankenshift
+        Mein Blog gedankenshift.de
       </a>
       <a class="button" href="{{ '/blog' | relative_url }}">
-        Handlettering Tipps
+        Handlettering Tipps und Tutorials
       </a>
       <a class="button" href="{{ '/' | relative_url }}">
-        Über mich
+        Mehr über mich
       </a>
     </p>
   </section>
