Update blog name

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ hide: true
 
       <p>
         Umdenken, loslassen, wohlfühlen. So lautet das Motto meines Blogs
-        <a target="_blank" href="{{ site.data.links.gedankenshift }}">Gedankenshift</a>.
+        <a target="_blank" href="{{ site.data.links.gedankenshift }}">gedankenshift.de</a>.
         Was einst mit dem Schwerpunkt Minimalismus begann, ist zu einem Ort
         gewachsen, an dem ich verschiedenste Denkanstöße für mehr Zufriedenheit,
         weniger Perfektionismus und Mut zu selbstbestimmten Entscheidungen gebe.
@@ -94,7 +94,7 @@ hide: true
 
       <p>
         <a class="button" target="_blank" href="{{ site.data.links.gedankenshift }}">
-          <i class="fa fa-lg fa-fw fa-sign-in"></i> Mein Blog Gedankenshift
+          <i class="fa fa-lg fa-fw fa-sign-in"></i> Mein Blog gedankenshift.de
         </a>
       </p>
 
