Replace images of blog section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/gedankenshift/01_entscheidungen.jpg,/gedankenshift/02_gedankenshift.jpg,/gedankenshift/03_goal.jpg" column=3 %}
+        {% include aligner.html images="/gedankenshift/01_dankbarkeitstagebuch.jpg,/gedankenshift/02_wunderbar.jpg,/gedankenshift/03_winorlearn.jpg" column=3 %}
       </p>
     </section>
 
