--- a/index.html
+++ b/index.html
@@ -85,11 +85,10 @@ hide: true
       <h2>Denkanstöße & Anregungen</h2>
 
       <p>
-        Umdenken, loslassen, wohlfühlen. So lautet das Motto meines Blogs
-        <a target="_blank" href="{{ site.data.links.gedankenshift }}">gedankenshift.de</a>.
-        Was einst mit dem Schwerpunkt Minimalismus begann, ist zu einem Ort
-        gewachsen, an dem ich verschiedenste Denkanstöße für mehr Zufriedenheit,
-        weniger Perfektionismus und Mut zu selbstbestimmten Entscheidungen gebe.
+        Ob Denkanstöße für mehr Zufriedenheit, Anregungen für selbstbestimmte
+        Entscheidungen oder Tipps, um Ballast loszulassen – auf meinem Blog
+        <a target="_blank" href="{{ site.data.links.gedankenshift }}">gedankenshift.de</a>
+        dreht sich alles rund um's Umdenken, Loslassen, Wohlfühlen.
       </p>
 
       <p>
