Add link to Etsy shop
Clean-up of artboxONE links

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ hide: true
       </p>
 
       <p>
-        <a class="button" href="{{ site.data.links.artboxone-artist }}" target="_blank">
+        <a class="button" href="{{ site.data.links.artboxone }}" target="_blank">
           <i class="fa fa-shopping-cart fa-fw"></i> Entdecke meine Motive bei artboxONE
         </a>
       </p>
