index.html: Add section about Etsy shop

--- a/index.html
+++ b/index.html
@@ -65,9 +65,24 @@ hide: true
       </p>
 
       <p>
-        Dir gefällt meine Buchstabenmalerei? Cool, das freut mich!
-        Einige meiner Motive kannst du als Kunstdruck im artboxONE Shop
-        erwerben.
+        Dir gefällt meine Buchstabenkunst? Cool, das freut mich! Schau doch mal
+        in meinem Etsy Shop vorbei. Vielleicht findest du ja Gefallen an der ein
+        oder anderen Handlettering-Postkarte.
+      </p>
+
+      <p>
+        <a class="button" href="{{ site.data.links.etsy }}" target="_blank">
+          <i class="fa fa-shopping-cart fa-fw"></i> Durchstöbere meinen Etsy Shop
+        </a>
+      </p>
+
+      <p>
+        {% include aligner.html images="/etsy/01_aufraeumen.jpg,/etsy/02_danke.jpg" column=2 %}
+      </p>
+
+      <p>
+        Übrigens bin ich auch im artboxONE Shop vertreten. Dort kannst du einige
+        meiner Motive als Kunstdruck erwerben.
       </p>
 
       <p>
