--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/individual/01_handlettering.jpg,/individual/02_handlettering.jpg,/individual/03_handlettering.jpg" column=3 %}
+        {% include aligner.html images="/individual/04_handlettering.jpg,/individual/05_handlettering.jpg" column=2 %}
       </p>
 
       <p>
@@ -113,7 +113,7 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/gedankenshift/01_dankbarkeitstagebuch.jpg,/gedankenshift/02_wunderbar.jpg,/gedankenshift/03_winorlearn.jpg" column=3 %}
+        {% include aligner.html images="/gedankenshift/01_dankbarkeitstagebuch.jpg,/gedankenshift/02_best.jpg" column=2 %}
       </p>
     </section>
 
