index.html: Add flipchart examples to flipchart section

--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@ hide: true
           <i class="fa fa-image fa-fw"></i> Beispiele meiner Flipcharts
         </a>
       </p>
+
+      <p>
+        {% include aligner.html images="/flipcharts/H_retrospektive_learning_matrix.jpg,/flipcharts/E_loesungsfokussierung_de_shazer.jpg,/flipcharts/A_retrospektive_seestern.jpg" column=3 %}
+      </p>
     </section>
 
   </article>
