Add comment about flipcharts in retromat

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ hide: true
         Eineinhalb Jahre davon war ich als Scrum Master / Prozessbegleiterin
         tätig. Während dieser Zeit haben sich einige Flipcharts von
         Retrospektiven und Workshops angesammelt, die ich gerne als Inspiration
-        zur Verfügung stelle.
+        zur Verfügung stelle. Einige meiner Flipcharts haben es sogar in den
+        <a href="https://retromat.org/" target="_blank">Retromat</a> geschafft.
       </p>
 
       <p>
