--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ hide: true
         bist auf der Suche nach einer individuellen Grußkarte oder hast eine
         besondere Geschenkidee, die ich für dich verschriftbildlichen kann? Du
         bist interessiert an einer kreativen Zusammenarbeit oder möchtest
-        einfach nur Fragen oder Anregungen loswerden? Schreib mich einfach an.
-        Ich freue mich, von dir zu hören!
+        einfach nur Fragen oder Anregungen loswerden? Schreib mir!
+        Ich freue mich, von dir zu hören.
       </p>
       <p>
         <a class="button" href="mailto:{{ site.data.social.email_address }}">
