--- a/link-tree.html
+++ b/link-tree.html
@@ -17,14 +17,11 @@ hide: true
       <a class="button" target="_blank" href="{{ site.data.links.etsy }}">
         Mein Etsy Shop
       </a>
-      <a class="button" target="_blank" href="{{ site.data.links.artboxone }}">
-        Meine Motive im artboxONE Shop
-      </a>
       <a class="button" href="{{ site.data.links.gedankenshift }}">
         Mein Blog gedankenshift.de
       </a>
       <a class="button" href="{{ '/blog' | relative_url }}">
-        Handlettering Tipps und Tutorials
+        Tipps für deine Kreativprojekte
       </a>
       <a class="button" href="{{ '/' | relative_url }}">
         Mehr über mich
