Update images on index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/etsy/01_aufraeumen.jpg,/etsy/02_danke.jpg" column=2 %}
+        {% include aligner.html images="/etsy/01_danke.jpg,/etsy/02_zeitstattzeug.jpg" column=2 %}
       </p>
 
       <p>
@@ -114,7 +114,7 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/gedankenshift/01_dankbarkeitstagebuch.jpg,/gedankenshift/02_best.jpg" column=2 %}
+        {% include aligner.html images="/gedankenshift/01_glaube_nicht_alles.jpg,/gedankenshift/02_dankbarkeitstagebuch.jpg" column=2 %}
       </p>
     </section>
 
