Remove handlettering blog link from navbar, minor content updates
* Handlettering blog will be removed soon.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ hide: true
         und bin seitdem auch auf
         <a href="https://instagram.com/{{ site.data.social.instagram }}" target="_blank">Instagram</a>
         aktiv. Außerdem versuche ich mich immer wieder an Sketchnotes, denn ich
-        lebe mit Haut und Haar die Devise <a href="{{ '2020/05/25/handlettering-uebung-ist-alles.html' | relative_url }}">»Übung ist alles«</a>.
+        lebe und liebe die Devise <a href="{{ '2020/05/25/handlettering-uebung-ist-alles.html' | relative_url }}">»Übung ist alles«</a>.
       </p>
 
       <p>
@@ -66,9 +66,9 @@ hide: true
       </p>
 
       <p>
-        Dir gefällt meine Buchstabenkunst? Cool, das freut mich! Schau doch mal
-        in meinem Etsy Shop vorbei. Vielleicht findest du ja Gefallen an der ein
-        oder anderen Handlettering-Postkarte.
+        Dir gefällt meine Buchstabenkunst? Cool, das freut mich! Schau doch auch
+        mal in meinem Etsy Shop vorbei. Vielleicht findest du ja Gefallen an der
+        ein oder anderen Handlettering-Postkarte.
       </p>
 
       <p>
