--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ hide: true
         Mit Hand, Herz und Hirn zaubere ich einzigartige Buchstabenkunst. Du
         hast eine besondere Idee, die ich für dich verschriftbildlichen kann? Du
         bist interessiert an einer kreativen Zusammenarbeit oder möchtest
-        einfach nur Fragen oder Anregungen loswerden? Schreib mir! Ich freue
+        Fragen oder Anregungen loswerden? Ich freue
         mich, von dir zu hören.
       </p>
       <p>
@@ -33,8 +33,8 @@ hide: true
       </p>
       <p>
         Mein richtiger Vorname ist übrigens Aljona – gesprochen wie Lyoner, nur
-        mit einem A vorne. Zusammen mit Ehemann und kleiner Tochter lebe ich in
-        der wunderbaren
+        mit einem A vorne. Zusammen mit Ehemann und Tochter lebe ich in
+        der schönen
         <a href="{{ site.data.links.location }}" target="_blank">Karlsruher Weststadt</a>.
         Mein Motto ist:
       </p>
@@ -47,12 +47,10 @@ hide: true
       <h2>Handlettering & Sketchnotes</h2>
 
       <p>
-        Im Januar 2016 verlor ich mein Herz an die
-        <a href="{{ '/handlettering/' | relative_url }}">Buchstabenmalerei</a> (Handlettering)
-        und bin seitdem auch auf
-        <a href="https://instagram.com/{{ site.data.social.instagram }}" target="_blank">Instagram</a>
-        aktiv. Außerdem versuche ich mich immer wieder an Sketchnotes, denn ich
-        lebe und liebe die Devise <a href="{{ '2020/05/25/handlettering-uebung-ist-alles.html' | relative_url }}">»Übung ist alles«</a>.
+        Seit 2016 schlägt mein Herz für die
+        <a href="{{ '/handlettering/' | relative_url }}">Buchstabenmalerei</a>, auch bekannt als Handlettering.
+        Ich lebe und liebe die Devise <a href="{{ '2020/05/25/handlettering-uebung-ist-alles.html' | relative_url }}">»Übung ist alles«</a>
+und versuche mich daher auch immer wieder an Sketchnotes.
       </p>
 
       <p>
@@ -66,9 +64,8 @@ hide: true
       </p>
 
       <p>
-        Dir gefällt meine Buchstabenkunst? Cool, das freut mich! Schau doch auch
-        mal in meinem Etsy Shop vorbei. Vielleicht findest du ja Gefallen an der
-        ein oder anderen Handlettering-Postkarte.
+        Dir gefällt meine Buchstabenkunst? Dann schau doch
+        mal in meinem Etsy Shop vorbei. Dort findest du Postkarten mit meinen handgeschriebenen Motiven.
       </p>
 
       <p>
@@ -82,7 +79,7 @@ hide: true
       </p>
 
       <p>
-        Übrigens bin ich auch im artboxONE Shop vertreten. Dort kannst du einige
+        Übrigens bin ich auch Künstlerin bei artboxONE. Dort kannst du einige
         meiner Motive als Kunstdruck erwerben.
       </p>
 
@@ -104,7 +101,7 @@ hide: true
         Ob Denkanstöße für mehr Zufriedenheit, Anregungen für selbstbestimmte
         Entscheidungen oder Tipps, um Ballast loszulassen – auf meinem Blog
         <a target="_blank" href="{{ site.data.links.gedankenshift }}">gedankenshift.de</a>
-        dreht sich alles rund um's Umdenken, Loslassen, Wohlfühlen.
+        dreht sich alles um's Umdenken, Loslassen, Wohlfühlen.
       </p>
 
       <p>
@@ -122,11 +119,11 @@ hide: true
       <h2>Flipcharts & Visualisierungen</h2>
 
       <p>
-        Hauptberuflich bin ich seit über neun Jahren in der IT-Branche zuhause.
-        Eineinhalb Jahre davon war ich als Scrum Master / Prozessbegleiterin
+        Seit 2011 bin ich hauptberuflich in der IT-Branche zuhause.
+        Eineinhalb Jahre davon war ich als Scrum Master
         tätig. Während dieser Zeit haben sich einige Flipcharts von
         Retrospektiven und Workshops angesammelt, die ich gerne als Inspiration
-        zur Verfügung stelle. Einige meiner Flipcharts haben es sogar in den
+        teile. Einige davon haben es sogar in den
         <a href="https://retromat.org/" target="_blank">Retromat</a> geschafft.
       </p>
 
