--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@ hide: true
       <p>
         Mit Hand, Herz und Hirn zaubere ich einzigartige Buchstabenkunst. Du
         hast eine besondere Idee, die ich für dich verschriftbildlichen kann? Du
-        bist interessiert an einer kreativen Zusammenarbeit oder möchtest
-        Fragen oder Anregungen loswerden? Ich freue
-        mich, von dir zu hören.
+        bist interessiert an einer kreativen Zusammenarbeit oder möchtest einfach so Kontakt aufnehmen?
+        Ich freue mich, von dir zu hören.
       </p>
       <p>
         <a class="button" href="mailto:{{ site.data.social.email_address }}">
@@ -65,7 +64,7 @@ und versuche mich daher auch immer wieder an Sketchnotes.
 
       <p>
         Dir gefällt meine Buchstabenkunst? Dann schau doch
-        mal in meinem Etsy Shop vorbei. Dort findest du Postkarten mit meinen handgeschriebenen Motiven.
+        in meinem Etsy Shop vorbei. Dort findest du Postkarten mit meinen handgeschriebenen Motiven.
       </p>
 
       <p>
@@ -121,9 +120,9 @@ und versuche mich daher auch immer wieder an Sketchnotes.
       <p>
         Seit 2011 bin ich hauptberuflich in der IT-Branche zuhause.
         Eineinhalb Jahre davon war ich als Scrum Master
-        tätig. Während dieser Zeit haben sich einige Flipcharts von
+        tätig. Während dieser Zeit haben sich diverse Flipcharts von
         Retrospektiven und Workshops angesammelt, die ich gerne als Inspiration
-        teile. Einige davon haben es sogar in den
+        bereitstelle. Einige davon haben es sogar in den
         <a href="https://retromat.org/" target="_blank">Retromat</a> geschafft.
       </p>
 
