Add new page about sketchnotes
* Replace nav bar link flipcharts by sketchnotes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ hide: true
         <a href="{{ '/handlettering/' | relative_url }}">Buchstabenkunst</a>,
         auch bekannt als Handlettering. Ich lebe und liebe die Devise
         <a href="{{ '/handlettering-fortschritt/' | relative_url }}">»Übung ist alles«</a>
-        und versuche mich daher auch immer wieder an Sketchnotes.
+        und versuche mich daher auch immer wieder an
+        <a href="{{ '/sketchnotes/' | relative_url }}">Sketchnotes</a>.
       </p>
 
       <p>
