--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ hide: true
         Mit Hand und Herz zaubere ich einzigartige Buchstabenkunst. Du
         hast eine besondere Idee, die ich für dich verschriftbildlichen kann,
         bist interessiert an einer Zusammenarbeit oder möchtest einfach so
-        Kontakt aufnehmen? Ich freue mich, von dir zu hören.
+        Kontakt aufnehmen?
       </p>
       <p>
         <a class="button" href="mailto:{{ site.data.social.email_address }}">
@@ -55,18 +55,8 @@ hide: true
       </p>
 
       <p>
-        <a class="button" href="{{ '/handlettering/' | relative_url }}">
-          <i class="fa fa-paint-brush fa-fw"></i> Beispiele meiner Buchstabenkunst
-        </a>
-      </p>
-
-      <p>
-        {% include aligner.html images="/individual/04_handlettering.jpg,/individual/05_handlettering.jpg" column=2 %}
-      </p>
-
-      <p>
-        Dir gefällt meine Buchstabenkunst? Dann schau doch
-        in meinem Etsy Shop vorbei. Dort findest du Postkarten mit meinen handgeschriebenen Motiven.
+        Seit Oktober 2020 habe ich außerdem einen eigenen Etsy Shop, in dem ich
+        Postkarten mit meiner Buchstabenkunst anbiete.
       </p>
 
       <p>
@@ -76,12 +66,12 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/etsy/01_danke.jpg,/etsy/02_zeitstattzeug.jpg" column=2 %}
+        {% include aligner.html images="/etsy/aufgeraeumt.jpg,/etsy/zeitstattzeug.jpg" column=2 %}
       </p>
 
       <p>
-        Übrigens bin ich auch Künstlerin bei artboxONE. Dort kannst du einige
-        meiner Motive als Kunstdruck erwerben.
+        Übrigens bin ich auch als Künstlerin bei artboxONE vertreten. Dort
+        kannst du einige meiner Motive als Kunstdruck erwerben.
       </p>
 
       <p>
@@ -99,10 +89,10 @@ hide: true
       <h2>Denkanstöße & Anregungen</h2>
 
       <p>
-        Ob Denkanstöße für mehr Zufriedenheit, Anregungen für selbstbestimmte
+        Ob Denkanstöße für mehr Zufriedenheit, Impulse für selbstbestimmte
         Entscheidungen oder Tipps, um Ballast loszulassen – auf meinem Blog
         <a target="_blank" href="{{ site.data.links.gedankenshift }}">gedankenshift.de</a>
-        dreht sich alles um's Umdenken, Loslassen, Wohlfühlen.
+        dreht sich alles rund um's Umdenken, Loslassen, Wohlfühlen.
       </p>
 
       <p>
@@ -132,10 +122,6 @@ hide: true
         <a class="button" href="{{ '/flipcharts/' | relative_url }}">
           <i class="fa fa-image fa-fw"></i> Beispiele meiner Flipcharts
         </a>
-      </p>
-
-      <p>
-        {% include aligner.html images="/flipcharts/H_retrospektive_learning_matrix.jpg,/flipcharts/E_loesungsfokussierung_de_shazer.jpg,/flipcharts/A_retrospektive_seestern.jpg" column=3 %}
       </p>
     </section>
 
