Update handlettering page

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ hide: true
       <h2>Handlettering & Sketchnotes</h2>
 
       <p>
-        Seit 2016 schlägt mein Herz für die
-        <a href="{{ '/handlettering/' | relative_url }}">Buchstabenkunst</a>,
-        auch bekannt als Handlettering. Ich lebe und liebe die Devise
+        Seit 2016 schlägt mein Herz für die Buchstabenkunst, auch bekannt als
+        <a href="{{ '/handlettering/' | relative_url }}">Handlettering</a>.
+        Ich lebe und liebe die Devise
         <a href="{{ '/handlettering-fortschritt/' | relative_url }}">»Übung ist alles«</a>
         und versuche mich daher auch immer wieder an
         <a href="{{ '/sketchnotes/' | relative_url }}">Sketchnotes</a>.
@@ -61,7 +61,7 @@ hide: true
 
       <p>
         <a class="button" href="{{ site.data.links.etsy }}" target="_blank">
-          <i class="fa fa-shopping-cart fa-fw"></i> Durchstöbere meinen Etsy Shop
+          <i class="fa fa-shopping-cart fa-fw"></i> Besuche meinen Etsy Shop
         </a>
       </p>
 
